# pyodide_c_tutorial

./: LICENSE  README.md
aproject/: pyproject.toml
aproject/src/: wrap.c
serve_example/: index.html
